2025-09-25  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Only enable igc idle timer when supported.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	New command `copy-message'

	* init.el (message-ring, message-ring-insert)
	(message-ring-inhibit-regexps, message-ring-insert-functions): New
	vars.
	(message-ring-ignore-keystroke, message-ring-inhibit)
	(message-ring-insert): New functions.  Added to
	`message-ring-insert-functions'.
	(message-insert-ring): New function.  Added to
	`set-message-functions'.
	(message-ring-read): New function.
	(copy-message): New command.  Bound C-M-S-w to it.

	* site-lisp/pp-posframe.el (pp-posframe-display-value): Do not
	include `=>' in the message.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Support emacs build without threads

	* init.el (diff-hl-update-async): Set to the value of (fboundp
	'make-thread).

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (help-fns-edit-variable, list-timers): Enable commands.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Use modus-themes-with-colors.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Update dotemacs-core macros

	* site-lisp/dotemacs-core.el (delq!, remq!): New macros.
	(alist-del!): Use a special keyword as the default value to avoid
	conflicts.
	* init.el: Use `delq!'.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Update tramp settings

	* init.el: Enable connection-local profile
	`remote-explicit-shell-file-name' and
	`remote-direct-async-process' for all ssh-based tramp protocols.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (straight-flymake-byte-compile): Use
	`elisp-flymake-byte-compile--executable'

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/flymake-define.el (flymake-define): Remove condition-case.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Limit savehist saved kill-ring entries

	* init.el (savehist-additional-variables): Limit maximum saved
	kill-ring entries to 5.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Optimize theme and font configuration
